tests/snapshots/integration__integration_tests__list__task_dag_with_upstream.snap
---
source: tests/integration_tests/list.rs
info:
  program: wt
  args:
    - list
    - "--progressive"
    - "--full"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
  [1mBranch[0m   [1mStatus[0m         [1mHEAD±[0m    [1mmain↕[0m     [1mmain…±[0m  [1mPath[0m         [1mRemote⇅[0m  [1mCI[0m  [1mCommit[0m    [1mAge[0m   [1mMessage[0m
@ [1mmain[0m         [2m^[0m                                     [1m./test-repo[0m   [32m⇡0[0m  [2m[31m⇣0[0m      [2m6c3da842[0m  [2m10mo[0m  [2mInitial commit on main[0m
+ ahead        [2m↑[0m[2m⇡[0m                 [32m↑1[0m        [32m+1[0m       ./ahead       [32m⇡1[0m  [2m[31m⇣0[0m      [2m2fff52c2[0m  [2m10mo[0m  [2mAhead commit[0m
+ [2min-sync[0m     [2m∅[0m                                      [2m./in-sync[0m     [32m⇡0[0m  [2m[31m⇣0[0m      [2m6c3da842[0m  [2m10mo[0m  [2mInitial commit on main[0m

⚪ [2mShowing 3 worktrees, 1 ahead[0m
